crates/churl/tests/snapshots/tui_snapshot__confirm_delete_endpoint_overlay.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐ List users                                       
│  ▸ orders                  │┌ URL ───────────────────────────────────────────┐
│  ▾ users                   ││GET  https://api.test/users                     │
│>   List users              │└────────────────────────────────────────────────┘
│    Create user             │┌ Request ───────────────────────────────────────┐
│    Get user                ││ Params(0)   Headers(0)   Auth   Body           │
│                            ││  (no params — a to add)                        │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│              ┏ Delete endpoint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓              │
│              ┃Delete this endpoint?                           ┃              │
│              ┃[y/n]                                           ┃──────────────┘
│              ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛──────────────┐
│                            ││no response yet                                 │
│                            ││GET https://api.test/users                      │
│                            ││                                                │
│                            ││press ctrl-s to send                            │
│                            ││                                                │
└────────────────────────────┘│                                                │
┌ Sequences ─────────────────┐│                                                │
│<leader>s a to add          ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 EXPLORER · demo · ? help · space leader · / search · : palette
