crates/churl/tests/snapshots/tui_snapshot__confirm_discard_changes_overlay.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snapshot(&mut app)
---
┏ Explorer ━━━━━━━━━━━━━━━━━━┓▐ List users ● ▌ ▐ Create user ▌                  
┃  ▸ orders                  ┃┌ URL ───────────────────────────────────────────┐
┃  ▾ users                   ┃│POST  https://api.test/users                    │
┃    List users ●            ┃└────────────────────────────────────────────────┘
┃>   Create user             ┃┌ Request ───────────────────────────────────────┐
┃    Get user                ┃│▐ Params(0) ▌ ▐ Headers(1) ▌ ▐ Auth ▌ ▐ Body ▌  │
┃                            ┃│  (no params — a to add)                        │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃└────────────────────────────────────────────────┘
┃                            ┃┌ Response ──────────────────────────────────────┐
┃                            ┃│no response yet                                 │
┃                            ┃│POST https://api.test/users                     │
┃                            ┃│                                                │
┃                            ┃│press ctrl-s to send                            │
┃                            ┃│                                                │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│                                                │
┌ Sequences ─────────────────┐│                                                │
│<leader>s a to add          ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 EXPLORER · demo · ? help · space leader · / search · : palette
