crates/churl/tests/snapshots/tui_snapshot__env_editor_editing_a_value.snap
---
source: crates/churl/tests/tui_snapshot.rs
assertion_line: 2191
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│> ▸┏ Environments & Variables ● ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓   │
│   ┃┌ Scopes ──────────────────┐┌ Workspace ─────────────────────────────┐┃───┘
│   ┃│WORKSPACE                 ││api_token  •••••• ✓                     │┃───┐
│   ┃│  Workspace               ││base_url   https://api.example.com/v2█  │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃│COLLECTIONS               ││                                        │┃   │
│   ┃│  users                   ││                                        │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃│PROFILES                  ││                                        │┃   │
│   ┃│  dev                     ││                                        │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃│SESSION                   ││                                        │┃───┘
│   ┃│  Session                 ││                                        │┃───┐
│   ┃│                          ││                                        │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃└──────────────────────────┘└────────────────────────────────────────┘┃   │
└───┃ base_url: workspace ✓                                                ┃   │
┌ Se┃ enter commit · tab name/value · esc cancel                           ┃   │
│<le┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛   │
└────────────────────────────┘└────────────────────────────────────────────────┘
 EXPLORER · demo · ? help · space leader · / search · : palette
