crates/churl/tests/snapshots/tui_snapshot__env_editor_masks_secret_named_literal.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: rendered
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│> ▸┏ Environments & Variables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓   │
│   ┃┌ Scopes ──────────────────┐┌ Workspace ─────────────────────────────┐┃───┘
│   ┃│WORKSPACE                 ││api_token  •••••• ✓                     │┃───┐
│   ┃│  Workspace               ││base_url   https://api.example.com ✓    │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃│COLLECTIONS               ││                                        │┃   │
│   ┃│  users                   ││                                        │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃│PROFILES                  ││                                        │┃   │
│   ┃│  dev                     ││                                        │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃│SESSION (read-only)       ││                                        │┃───┘
│   ┃│  Session                 ││                                        │┃───┐
│   ┃│                          ││                                        │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃└──────────────────────────┘└────────────────────────────────────────┘┃   │
└───┃ api_token: workspace ✓                                               ┃   │
┌ Se┃ j/k move · a add · enter value · r name · d delete · p peek · h scope┃   │
│<le┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛   │
└────────────────────────────┘└────────────────────────────────────────────────┘
 EXPLORER · demo · ? help · space leader · / search · : palette
