crates/churl/tests/snapshots/tui_snapshot__env_editor_opens_with_both_panes.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│> ▸┏ Environments & Variables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓   │
│   ┃┌ Scopes ──────────────────┐┌ Workspace ─────────────────────────────┐┃───┘
│   ┃│WORKSPACE                 ││api_token  •••••• ✓                     │┃───┐
│   ┃│  Workspace               ││base_url   https://api.example.com ✓    │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃│COLLECTIONS               ││                                        │┃   │
│   ┃│  users                   ││                                        │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃│PROFILES                  ││                                        │┃   │
│   ┃│  dev                     ││                                        │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃│                          ││                                        │┃───┘
│   ┃│                          ││                                        │┃───┐
│   ┃│                          ││                                        │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃└──────────────────────────┘└────────────────────────────────────────┘┃   │
└───┃ api_token: workspace ✓                                               ┃   │
┌ Se┃ j/k move · l/enter edit vars · n new profile · r rename · d delete · ┃   │
│<le┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛   │
└────────────────────────────┘└────────────────────────────────────────────────┘
 EXPLORER · demo · ? help · space leader · / search · : palette
