crates/churl/tests/snapshots/tui_snapshot__env_editor_precedence_shows_shadowing.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: rendered
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│> ▸┏ Environments & Variables ● ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓   │
│   ┃┌ Scopes ──────────────────┐┌ Workspace ─────────────────────────────┐┃───┘
│   ┃│WORKSPACE                 ││api_token  •••••• ✓                     │┃───┐
│   ┃│  Workspace               ││base_url   https://api.example.com → pro│┃   │
│   ┃│                          ││                                        │┃   │
│   ┃│COLLECTIONS               ││                                        │┃   │
│   ┃│  users                   ││                                        │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃│PROFILES                  ││                                        │┃   │
│   ┃│● dev                     ││                                        │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃│                          ││                                        │┃───┘
│   ┃│                          ││                                        │┃───┐
│   ┃│                          ││                                        │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃│                          ││                                        │┃   │
│   ┃└──────────────────────────┘└────────────────────────────────────────┘┃   │
└───┃ api_token: profile dev — · workspace ✓                               ┃   │
┌ Se┃ ● unsaved · j/k move · l/enter edit vars · n new profile · r rename ·┃   │
│<le┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛   │
└────────────────────────────┘└────────────────────────────────────────────────┘
 EXPLORER · demo · ? help · space leader · / search · : palette
