crates/churl/tests/snapshots/tui_snapshot__help_overlay.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snapshot(&mut app)
---
┏ Explorer ━━━━━━━━━━━━━━━━━━┓┌ URL ───────────────────────────────────────────┐
┃> ▸ orders                  ┃│no endpoint selected                            │
┃  ▸ users  ┏ Help — keys (?/esc/q · / search) ━━━━━━━━━━━━━━━━━━━━┓───────────┘
┃           ┃Global                                                ┃───────────┐
┃           ┃  Ctrl-c, q           quit                            ┃           │
┃           ┃  Tab                 focus next pane                 ┃           │
┃           ┃  Shift-BackTab       focus previous pane             ┃           │
┃           ┃  h                   collapse / parent               ┃           │
┃           ┃  j                   move down                       ┃           │
┃           ┃  k                   move up                         ┃           │
┃           ┃  l                   expand / descend                ┃           │
┃           ┃  Enter               select / toggle                 ┃           │
┃           ┃  g                   jump to top                     ┃───────────┘
┃           ┃  Shift-g             jump to bottom                  ┃───────────┐
┃           ┃  Ctrl-d              scroll half page down           ┃           │
┃           ┃  Ctrl-u              scroll half page up             ┃           │
┃           ┃  Ctrl-s              send request                    ┃           │
┃           ┃  /                   search endpoints                ┃           │
┃           ┃  :                   command palette                 ┃           │
┗━━━━━━━━━━━┃  f                   jump to pane / row              ┃           │
┌ Sequences ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛           │
│<leader>s a to add          ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 EXPLORER · demo · ? help · space leader · / search · : palette
